# credit-risk-app

./: .dockerignore  .gitignore  README.md  build.sh  render.yaml
.github/workflows/: merge.yml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: CreditParametersForm.css  CreditParametersForm.js
infrastructure/: README.md  atmos.yaml
infrastructure/components/terraform/credit-risk-service/: ecs.tf  orgs-environment-dev-eu-west-2-credit-risk-service.planfile  outputs.tf  provider.tf  variables.tf
infrastructure/stacks/orgs/environment/development/: eu-west-2.yaml  us-east-1.yaml
infrastructure/stacks/orgs/environment/production/: eu-west-2.yaml  us-east-1.yaml
infratsructure/: ecr.tf  ecs.tf  provider.tf  variables.tf
src/: .env.example  pyproject.toml  requirements.txt
src/calculate/: models.py
src/calculate/api/: serializers.py  viewsets.py
src/calculate/migrations/: 0001_initial.py  0002_initial.py  0003_remove_creditparameters_month.py  0004_remove_credit_history_age.py
src/calculate/tests/: factories.py  test_viewsets.py
src/creditAPI/: settings.py
src/docker/: Dockerfile  docker-compose.yml
src/scripts/: build.sh
src/users/: models.py
src/users/migrations/: 0001_initial.py
